<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.base.BaseActivity">

    <ScrollView android:id="@+id/scrollView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/mainCL"
                                                           android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">

            <ImageView android:id="@+id/ic_userPicture"
                       android:layout_margin="@dimen/default_margin"
                       app:layout_constraintStart_toStartOf="@+id/mainCL"
                       app:layout_constraintTop_toTopOf="@+id/mainCL"
                       app:layout_constraintEnd_toEndOf="@+id/mainCL"
                       app:layout_constraintBottom_toTopOf="@+id/tv_fullName"
                       android:src="@mipmap/ic_launcher"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>

            <TextView android:id="@+id/tv_personalInfo"
                      android:text="@string/text_personal_info"
                      android:gravity="center"
                      app:layout_constraintStart_toStartOf="@+id/mainCL"
                      app:layout_constraintTop_toBottomOf="@+id/ic_userPicture"
                      app:layout_constraintEnd_toEndOf="@id/mainCL"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"/>

            <TextView android:id="@+id/tv_fullName"
                      android:hint="@string/text_full_name"
                      android:textColor="@color/fontColor"
                      android:layout_marginLeft="@dimen/left_margin"
                      app:layout_constraintStart_toStartOf="@+id/mainCL"
                      app:layout_constraintTop_toBottomOf="@+id/tv_personalInfo"
                      app:layout_constraintEnd_toEndOf="@+id/mainCL"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"/>

            <TextView android:id="@+id/tv_address"
                      android:hint="@string/text_address"
                      android:textColor="@color/fontColor"
                      android:layout_marginLeft="@dimen/left_margin"
                      app:layout_constraintStart_toStartOf="@+id/mainCL"
                      app:layout_constraintTop_toBottomOf="@+id/tv_fullName"
                      app:layout_constraintEnd_toEndOf="@+id/mainCL"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"/>

            <TextView android:id="@+id/tv_phoneNumber"
                      android:hint="@string/text_phone_number"
                      android:textColor="@color/fontColor"
                      android:layout_marginLeft="@dimen/left_margin"
                      app:layout_constraintStart_toStartOf="@+id/mainCL"
                      app:layout_constraintTop_toBottomOf="@+id/tv_address"
                      app:layout_constraintEnd_toEndOf="@+id/mainCL"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"/>

            <TextView android:id="@+id/tv_email"
                      android:hint="@string/text_email"
                      android:textColor="@color/fontColor"
                      android:layout_marginLeft="@dimen/left_margin"
                      app:layout_constraintStart_toStartOf="@+id/mainCL"
                      app:layout_constraintTop_toBottomOf="@+id/tv_phoneNumber"
                      app:layout_constraintEnd_toEndOf="@+id/mainCL"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"/>

            <TextView android:id="@+id/tv_workExperience"
                      android:text="@string/text_work_experience"
                      android:gravity="center"
                      app:layout_constraintStart_toStartOf="@id/mainCL"
                      app:layout_constraintTop_toBottomOf="@+id/tv_email"
                      app:layout_constraintEnd_toEndOf="@id/mainCL"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"/>

            <ListView android:id="@+id/list_workExperience"
                      app:layout_constraintStart_toStartOf="@id/mainCL"
                      app:layout_constraintTop_toBottomOf="@+id/tv_workExperience"
                      app:layout_constraintEnd_toEndOf="@+id/mainCL"
                      android:layout_width="wrap_content"
                      android:layout_height="150dp">
            </ListView>

            <TextView android:id="@+id/tv_educationAndTraining"
                      android:text="@string/text_education_and_training"
                      android:gravity="center"
                      app:layout_constraintStart_toStartOf="@+id/mainCL"
                      app:layout_constraintTop_toBottomOf="@+id/list_workExperience"
                      app:layout_constraintEnd_toEndOf="@+id/mainCL"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"/>

            <ListView android:id="@+id/list_educationAndTraining"
                      app:layout_constraintStart_toStartOf="@id/mainCL"
                      app:layout_constraintTop_toBottomOf="@id/tv_educationAndTraining"
                      app:layout_constraintEnd_toEndOf="@id/mainCL"
                      android:layout_width="wrap_content"
                      android:layout_height="500dp">

            </ListView>

            <TextView android:id="@+id/tv_jobRelatedSkills"
                      android:text="@string/text_job_related_skills"
                      android:gravity="center"
                      app:layout_constraintStart_toStartOf="@id/mainCL"
                      app:layout_constraintTop_toBottomOf="@+id/list_educationAndTraining"
                      app:layout_constraintEnd_toEndOf="@id/mainCL"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"/>

            <ListView android:id="@+id/list_jobRelatedSkills"
                      app:layout_constraintStart_toStartOf="@+id/mainCL"
                      app:layout_constraintTop_toBottomOf="@id/tv_jobRelatedSkills"
                      app:layout_constraintEnd_toEndOf="@id/mainCL"
                      app:layout_constraintBottom_toBottomOf="@+id/mainCL"
                      android:layout_width="wrap_content"
                      android:layout_height="350dp">

            </ListView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>